# nrf-starter

./: .gitignore  COURSE-OUTLINE.md  Cargo.toml  DOCUMENTATION.md  EXERCISES.md  LICENSE  README.md
00-hello-world/: Cargo.toml
01-blinky-button/: Cargo.toml
01-blinky-button/.cargo/: config.toml
01-blinky-button/src/: main.rs
src/: main.rs
